# load_250_ws

./: README.md  marker_positions.json
src/load_250_bringup/: CMakeLists.txt  package.xml
src/load_250_bringup/config/: diff_drive.rviz  ros_gz_example_bridge.yaml
src/load_250_bringup/include/load_250_bringup/: marker_read.h
src/load_250_bringup/launch/: load_250.launch.py  read_load_250.launch.py  robot_load_250.launch.py  write_load_250.launch.py
src/load_250_bringup/src/cpp/: marker_read.cpp  marker_write.cpp  three_sample_waypoint.cpp  waypoint_from_json.cpp
src/load_250_description/: CMakeLists.txt  package.xml
src/load_250_description/models/diff_drive/: model.sdf
src/load_250_description/models/justload_250/: model.config  model.sdf
src/load_250_description/models/justload_250/meshes/platform_1/: platform_visual.mtl
src/load_250_description/models/load_250/: model.sdf
src/load_250_description/models/load_250/meshes/camera_1/: camera_visual.mtl
src/load_250_gazebo/: CMakeLists.txt  package.xml
src/load_250_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/load_250_gazebo/worlds/: diff_drive.sdf
src/load_250_navigation/: CMakeLists.txt  package.xml
src/load_250_navigation/config/: nav2_params.yaml  twist_mux.yaml
src/load_250_navigation/launch/: navigation.launch.py  navigation_launch.py
src/load_250_slam/: CMakeLists.txt  package.xml
src/load_250_slam/config/: mapper_params_online_async.yaml
src/load_250_slam/launch/: localization_launch.py  online_async_launch.py
src/load_250_slam/maps/: a.pgm  a.yaml  b.data
tf/: frames_2025-03-07_02.49.56.gv
