<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>load_250_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the load_250 project</description>
  <maintainer email="prathameshphulpagar8p@gmail.com">Prathamesh</maintainer>
  <license>Apache 2.0</license>
  <author>Prathamesh</author>


  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>

  <depend>load_250_description</depend>
  <depend>load_250_gazebo</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

