<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>load_250_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the load_250 project</description>
  <maintainer email="prathameshphulpagar8p@gmail.com">Prathamesh</maintainer>
  <license>Apache 2.0</license>
  <author>Prathamesh</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>load_250_description</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

